midterm: remove worthless qualifier

--- a/midterm-report/conclusion.tex
+++ b/midterm-report/conclusion.tex
@@ -2,5 +2,5 @@
 \label{sec:conclusion}
 Initially, we had planned to focus on security and portability of our implementation.  However, as we progressed, we discovered that performance could not simply be ignored.  We discovered that QEMU was unusably slow in a smartphone environment and we had to step back and reconsider our goals in respect to performane.
 
-We experienced a lot of success in porting X to the Pre, and although the preliminary virtualization attempts were unusably slow, the remaining options are hardly exhausted.  In terms of performance Linux Containers (LXC) looks very promising.  Despite needing to backport the needed kernel functionality to support LXC on the Pre, we remain optimistic and will continue working towards our goal of a usable, fast, and secure solution for running native and possibly untrusted apps on smartphones.
+We experienced a lot of success in porting X to the Pre, and although the preliminary virtualization attempts were unusably slow, the remaining options are hardly exhausted.  In terms of performance Linux Containers (LXC) looks very promising.  Despite needing to backport the needed kernel functionality to support LXC on the Pre, we remain optimistic and will continue working towards our goal of a usable, fast, and secure solution for running native and untrusted apps on smartphones.
 
