Bib titles + cleanup

--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -19,7 +19,7 @@ We made a number of important design decisions, many of which were in response t
 The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is 'xfree86', but there are others including 'kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl component it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained.
 From X version control: ``if anyone uses this in production, a big scary monster will eat them'' \cite{x_quote}.  The result of this was much work spending fixing Xsdl and bringing it up to date to work with the rest of X.  Fixes including interactions with the X server, as well as fixing the rendering code and the input handling.
 \subsubsection{SDL and GLES}
-As described above, the code we started with used Simple Direct Library (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionaliy, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
+As described above, the code we started with used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionaliy, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
 
 \subsubsection{Devices that don't support SDL}
 Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} also, CITE?) passing the buffer to a java app to blit and the java app blitting to the screen, as well as gathering input and feeding it to the X server.
