--- a/midterm-report/mybib.bib
+++ b/midterm-report/mybib.bib
@@ -141,26 +141,32 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 }
 
 @misc{x_quote,
+  title = "{X Version Control}",
   howpublished = {\url{http://cgit.freedesktop.org/xorg/xserver/commit/?id=52bc6d944946e66ea2cc685feaeea40bb496ea83}},
 }
 
 @misc{x_glossary,
+  title = "{X Glossary}",
   howpublished = {\url{http://www.x.org/wiki/Development/Documentation/Glossary}},
 }
 
 @misc{sdl,
+  title = "{Simple DirectMedia Layer}",
   howpublished = {\url{http://www.libsdl.org/}},
 }
 
 @misc{gles,
+  title = "{Open GL Embeded Systems}",
   howpublished = {\url{http://www.khronos.org/opengles/2_X/}},
 }
 
 @misc{rootless,
+  title = "{Rootless X}",
   howpublished = {\url{http://cgit.freedesktop.org/xorg/xserver/tree/miext/rootless/README.txt}},
 }
 
 @misc{notifications,
+  title = "{X Notifications}",
   howpublished = {\url{http://www.galago-project.org/specs/notification/0.9/index.html}},
 }
 
