--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -30,7 +30,7 @@ The second issue is that many keys that are required for doing something as simp
 \subsubsection{Future: Integrating even more}
 A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.\\
 
-One solution to this is to take advantage of the work done on rootless X \cite{rootless}.  ``The generic rootless layer allows an X server to be implemented on top of another window server in a cooperative manner. This allows the X11 windows and native windows of the underlying window server to coexist on the same screen. The layer is called "rootless" because the root window of the X server is generally not drawn. Instead, each top-level child of the root window is represented as a separate on-screen window by the underlying window server'' \cite{rootless}.\\
+One solution to this is to take advantage of the work done on rootless X \cite{rootless}.  ``The generic rootless layer allows an X server to be implemented on top of another window server in a cooperative manner. This allows the X11 windows and native windows of the underlying window server to coexist on the same screen. The layer is called ``rootless'' because the root window of the X server is generally not drawn. Instead, each top-level child of the root window is represented as a separate on-screen window by the underlying window server'' \cite{rootless}.\\
 
 Another idea is to take advantage of standard X notification events \cite{notifications} and hook into mobile device notification systems, which both WebOS and Android support. 
 
