--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -26,7 +26,7 @@ Although the Pre has support for SDL, many devices don't, and that's something w
 \subsubsection{Keyboard}
 Keyboard support is very important when using applications.  However it was a stumbling block for us two main reasons: 1)mapping SDL to something the X server can use 2)adding support for keys and features that are not on the original device.\\
 It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, 'orange' plus 'q' is the '/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
-The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '|' character, '>', '<', arrow keys, and more.  We currently support many such keys on the pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
+The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '\textbar' character, '\textgreater', '\textless', arrow keys, and more.  We currently support many such keys on the pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
 \subsubsection{Future: Integrating even more}
 A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.\\
 
