--- a/midterm-report/mybib.bib
+++ b/midterm-report/mybib.bib
@@ -173,3 +173,13 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
 @misc{jni,
   howpublished = {\url{http://java.sun.com/j2se/1.4.2/docs/guide/jni/index.html}},
 }
+
+@misc{sb2,
+  title = "{Scratchbox 2}",
+  howpublished = {\url{http://www.freedesktop.org/wiki/Software/sbox2}},
+}
+
+@misc{webosinterals,
+  title = "{WebOS Internals}",
+  howpublished = {\url{http://www.webos-internals.org}},
+}
