--- a/midterm-report/design.tex
+++ b/midterm-report/design.tex
@@ -30,11 +30,11 @@ The Kernel Virtual Machine Monitor (KVM) is a virtualization technique in which 
 The ARM architecture is not strictly virtualizable as there are privileged instructions which do not trap to the kernel and therefore a simple 'trap-and-emulate' approach cannot be used. Hence more complex techniques like dynamic binary translation, translation to add software interrupts or paravirtualization are required for porting KVM to ARM. There have been some initial attempts to port KVM to ARM \cite{columbia} but the high performance overhead reported leads us to explore other solutions for isolation and security. 
 
 \subsubsection{User Mode Linux}
-User Mode Linux (UML) is a virtualization technique in which the guest operating systems run as user mode processes inside the host. When compared to hypervisors like VMWare ESX or Xen, UML offers a simpler solution and is patched into the Linux kernel source tree. The first version of User Mode Linux used \emph{ptrace} to virtualize system calls and modifty and divert them into the user space kernel for execution. Later versions of UML introduced the Separate Kernel Address Space (SKAS) mode  where the UML kernel runs in a different address space from its processes. This addresses security issues by making the UML kernel inaccessible to the UML processes and also provides a noticeable speedup. Also this technique is only effective when the architecture of the guest operating system is the same as the host and fits the design constraints of our problem. User Mode Linux was built originally on the i386 architecture and has since been extended to the PowerPC and x86\_64 architectures. Technically it should be feasible to port UML to ARM architecture. \\
+User Mode Linux (UML) is a virtualization technique in which the guest operating systems run as user mode processes inside the host. When compared to hypervisors like VMWare ESX or Xen, UML offers a simpler solution and is patched into the Linux kernel source tree. The first version of User Mode Linux used \emph{ptrace} to virtualize system calls and modify and divert them into the user space kernel for execution. Later versions of UML introduced the Separate Kernel Address Space (SKAS) mode  where the UML kernel runs in a different address space from its processes. This addresses security issues by making the UML kernel inaccessible to the UML processes and also provides a noticeable speedup. Also this technique is only effective when the architecture of the guest operating system is the same as the host and fits the design constraints of our problem. User Mode Linux was built originally on the i386 architecture and has since been extended to the PowerPC and x86\_64 architectures. Technically it should be feasible to port UML to ARM architecture. \\
 Some downsides of using UML are that the amount of overhead is relatively large for workloads which have a number of interrupts and the project is not under active development anymore. We plan to explore porting UML to ARM and measure the overhead caused in the weeks ahead. 
 
 \subsubsection{Linux Containers}
-Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms.  Resource namespaces allow containers to manipulate the accessing of processes, files, and hardware resources.  Control groups are used to limit the resources used by a container.  Capability bounding sets reduce a container's priviledges.  
+Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms.  Resource namespaces allow containers to manipulate the accessing of processes, files, and hardware resources.  Control groups are used to limit the resources used by a container.  Capability bounding sets reduce a container's privileges.  
 
 Unlike with conventional virtualization, LXC has almost no overhead as it does not require guest OSes or dynamic binary translation.  On the other hand, because it is a OS-level virtualization technique and runs processes on a Linux kernel, other OSes such as Windows and other UNIXes (BSD or OSX) can not be used as containers.  
 
