--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -2,17 +2,17 @@
 \label{sec:impl}
 \subsection{Cross-Compilation}
 Nearly all modern smartphones run ARM processors.  On the other hand, nearly all modern desktops run x86 or x86\_64 processors. As a result of the architectural differences, binaries created in normal desktop PC environments will not work on smartphones. Additionally, the devices themselves are rather limited with respect to building code.  Relatively limited cpu, memory, disk, coupled with input and usability concerns make this an unattractive way to compile code.  A number of devices have lacking userspace environments that would make compiling code on them even more difficult.
-Our solution is to use a cross-compilation environment to use a faster desktop to write our code targetting the various mobile platforms.
-We build upon the scratchbox2 enviroment \cite{sb2}, in particular using the cross-compilation enviroment created by webos-internals \cite{webosinterals}.\\
+Our solution is to use a cross-compilation environment to use a faster desktop to write our code targeting the various mobile platforms.
+We build upon the scratchbox2 environment \cite{sb2}, in particular using the cross-compilation enviroment created by webos-internals \cite{webosinterals}.\\
 
 Scratchbox2 is a cross-compilation engine that uses a combination of emulation and library interposition to make it easier to cross-compile code bases that don't otherwise provide a means to cross-compile.
-The result is almost a virtualized environment that automatically invokes cross-compilation tools as required, abstracting away much of difficulies that cross-compilation can usually entail.\\
+The result is almost a virtualized environment that automatically invokes cross-compilation tools as required, abstracting away much of difficulties that cross-compilation can usually entail.\\
 
 Important features in our environment include 1)a system of dependency resolution that allows us to conveniently build and package our applications more easily; 2)staging headers and device libraries such that we can use the same ones that are available on the target device; 3)static or dynamically linked executable compilation.
-This allows us to conveniently build for multiple platforms from the comfort and reliabilty of our own systems.  Presently we use this to target the Palm Pre as well as android devices, in particular the Motorola G1. \\
+This allows us to conveniently build for multiple platforms from the comfort and reliability of our own systems.  Presently we use this to target the Palm Pre as well as android devices, in particular the Motorola G1. \\
 
 \subsection{libc vs bionic}
-Despite the fact the Pre and the Android are both running Linux OSes on an arm chip, the environments they provide for our project are enormously different.  The Pre is bundled with a large suite of common Unix applications and libraries, while the Android diverges, running minimalistic libraries and lacking many common libraries and applications.  Of these differences, the C compiler library is probably the most substantial. The Pre uses an unmodified version of glibc and the Android uses Bionic, a lightweight and small C compiler library.  Many Linux applications have glibc as a dependency, and as a result, builds for the Android must have statically link libraries.  Between this and the lack of useful applications (gdb and other debugging tools) development on the Android has provent much more difficult.  
+Despite the fact the Pre and the Android are both running Linux OSes on an arm chip, the environments they provide for our project are enormously different.  The Pre is bundled with a large suite of common Unix applications and libraries, while the Android diverges, running minimalistic libraries and lacking many common libraries and applications.  Of these differences, the C compiler library is probably the most substantial. The Pre uses an unmodified version of glibc and the Android uses Bionic, a lightweight and small C compiler library.  Many Linux applications have glibc as a dependency, and as a result, builds for the Android must have statically link libraries.  Between this and the lack of useful applications (gdb and other debugging tools) development on the Android has prevent much more difficult.  
 
 \subsection{X-Server}
 
@@ -22,7 +22,7 @@ The X-Server architecture contains multiple Device Dependent X (DDX) implementat
 
 From X version control: ``if anyone uses this in production, a big scary monster will eat them'' \cite{x_quote}.  The result of this was much work spending fixing Xsdl and bringing it up to date to work with the rest of X.  Fixes including interactions with the X server, as well as fixing the rendering code and the input handling.
 \subsubsection{SDL and GLES}
-As described above, the code we started with used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionaliy, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
+As described above, the code we started with used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionality, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
 
 \subsubsection{Devices that don't support SDL}
 Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} passing the buffer to a java app to blit and the java app blitting to the screen, as well as gathering input and feeding it to the X server.
