--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -18,7 +18,7 @@ Despite the fact the Pre and the Android are both running Linux OSes on an arm c
 
 We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  The result of our X server (including a fixed Xsdl implementation) work is available on the website.
 \subsubsection{DDX}
-The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is 'xfree86', but there are others including 'kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl component it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained.
+The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is `xfree86', but there are others including `kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl component it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained.
 
 From X version control: ``if anyone uses this in production, a big scary monster will eat them'' \cite{x_quote}.  The result of this was much work spending fixing Xsdl and bringing it up to date to work with the rest of X.  Fixes including interactions with the X server, as well as fixing the rendering code and the input handling.
 \subsubsection{SDL and GLES}
@@ -29,9 +29,9 @@ Although the Pre has support for SDL, many devices don't, and that's something w
 \subsubsection{Keyboard}
 Keyboard support is very important when using applications.  However it was a stumbling block for us two main reasons: 1)mapping SDL to something the X server can use 2)adding support for keys and features that are not on the original device.\\
 
-It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, 'orange' plus 'q' is the '/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
+It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, `orange' plus `q' is the `/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
 
-The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '\textbar' character, '\textgreater', '\textless', arrow keys, and more.  We currently support many such keys on the pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
+The second issue is that many keys that are required for doing something as simple as using `xterm' simply don't exist on most phones.  Examples of such characters include the pipe `\textbar' character, `\textgreater', `\textless', arrow keys, and more.  We currently support many such keys on the Pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
 \subsubsection{Future: Integrating even more}
 A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.\\
 
