--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -16,7 +16,8 @@ Despite the fact the Pre and the Android are both running Linux OSes on an ARM c
 
 \subsection{X-Server}
 
-We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  The result of our X server (including a fixed Xsdl implementation) work is available on the website.
+We made a number of important design decisions, many of which were in response to unexpected implementation difficulties.  The result of our X server (including a fixed Xsdl implementation) work is available on the website\footnotemark[1].
+\footnotetext[1]{http://wdtz.org/cs523/}
 \subsubsection{DDX}
 The X-Server architecture contains multiple Device Dependent X (DDX) implementations.  The most used one is 'xfree86', but there are others including 'kdrive' \cite{x_glossary}.  We chose to use kdrive because of the Xsdl component it contains, which allows one to run X using SDL as a backend.  Unfortunately Xsdl is so out of date that it was recently removed from the X project altogether due to being broken and unmaintained.
 
@@ -25,13 +26,13 @@ From X version control: ``if anyone uses this in production, a big scary monster
 As described above, the code we started with used Simple DirectMedia Layer (SDL) \cite{sdl} for input and rendering.  Once we had achieved this functionality, we noticed the display lagged when doing even basic things like moving the cursor.  Previous experience working with SDL on this device suggested that using GLESv2 \cite{gles} and custom shaders would improve a task even as simple as blitting, so we ported the rendering bits to use GLESv2.
 
 \subsubsection{Devices that don't support SDL}
-Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} passing the buffer to a java app to blit and the java app blitting to the screen, as well as gathering input and feeding it to the X server.
+Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} passing the buffer to a java application to blit and the java application blitting to the screen, as well as gathering input and feeding it to the X server.
 \subsubsection{Keyboard}
 Keyboard support is very important when using applications.  However it was a stumbling block for us two main reasons: 1)mapping SDL to something the X server can use 2)adding support for keys and features that are not on the original device.\\
 
 It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, 'orange' plus 'q' is the '/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
 
-The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '\textbar' character, '\textgreater', '\textless', arrow keys, and more.  We currently support many such keys on the pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
+The second issue is that many keys that are required for doing something as simple as using 'xterm' simply don't exist on most phones.  Examples of such characters include the pipe '\textbar' character, '\textgreater', '\textless', arrow keys, and more.  We currently support many such keys on the Pre through more customizations to the xkb layout and hope to support other devices as we add support for them as well.
 \subsubsection{Future: Integrating even more}
 A primary goal of our project is to cleanly integrate into the host X server.  While our current implementation is a great step and does integrate as a window in the existing windowing system for the device, there is an issue.  Presently the X server will render everything into one window (see Figure \ref{fig:x_screenie}), which requires a window manager to manage the windows.  This is bad both because it is hard to use but also because it is a hard break from the goal of integrating with the parent window manager--now the user has to think about it as two separate systems.\\
 
