--- a/midterm-report/impl.tex
+++ b/midterm-report/impl.tex
@@ -27,7 +27,7 @@ As described above, the code we started with used Simple DirectMedia Layer (SDL)
 \subsubsection{Devices that don't support SDL}
 Although the Pre has support for SDL, many devices don't, and that's something we've taken into consideration.  The kdrive structure can be made rather portable: at it's heart it just needs something that can render a pixelbufer, and feed it input (either event driven or by polling).  This means that we could potentially support Android devices through Java Native Interface (JNI) \cite{jni} passing the buffer to a java app to blit and the java app blitting to the screen, as well as gathering input and feeding it to the X server.
 \subsubsection{Keyboard}
-Keyboard support is very important when using applications.  However it was a stumbling block for us two main reasons: 1)mapping SDL to something the X server can use 2)adding support for keys and features that are not on the original device.\\
+Keyboard support is very important when using applications.  However it was a stumbling block for us for two main reasons: 1) mapping SDL to something the X server can use 2) adding support for keys and features that are not on the original device.\\
 
 It is common for keyboards, particularly on phones, to have each key have multiple uses when pressed with a special modifier.  As an example, on the Pre, `orange' plus `q' is the `/' key.  This presented a problem because this means capturing the modifier requires creating a state machine to process the input as opposed to a simple lookup table.  We ended up using xkb to do this, and the results are in the xkeyboard-config git repository. \\
 
