Pull out some stuff into overview from Design

--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -25,6 +25,7 @@ University of Illinois at Urbana Champaign}
 %\input{abstract.tex}
 \input{intro.tex}
 \label{sec:intro}
+\input{overview.tex}
 \input{design.tex}
 \input{impl.tex}
 \input{eval.tex}
