added \Comment macro, put to use in LXC results section

--- a/final-report/eval.tex
+++ b/final-report/eval.tex
@@ -42,6 +42,11 @@ ftext & $481000$ & $556000$ & $11.43\%$ \\ [2pt]
 \label{tab:x_results}
 \end{table}
 
+\subsection{LXC Performance numbers}
+
+\Comment{FINISH THIS}
+Table \ref{tab:lxc_perf}.
+
 \begin{table}[ht]
 {\small
 \hfill{}
