--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -7,6 +7,9 @@
 \usepackage{multirow}
 
 \sloppy
+%Define one of these to see comments
+%\def\Comment#1{}
+\def\Comment#1{\noindent\textbf{\textsl{\large $\langle!\langle$#1$\rangle!\rangle$}}}
 
 \title{MoVirt: More Mobile than Mobile}
 \author{Will Dietz, Kevin Larson, Shivaram Venkataraman\\
