remove sloppy directive

--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -6,8 +6,9 @@
 \usepackage{mdwlist}
 \usepackage{multirow}
 
-\sloppy
-%Define one of these to see comments
+%\sloppy
+
+%Define one of these to see comments (or not)
 %\def\Comment#1{}
 \def\Comment#1{\noindent\textbf{\textsl{\large $\langle!\langle$#1$\rangle!\rangle$}}}
 
