--- a/final-report/abstract.tex
+++ b/final-report/abstract.tex
@@ -1,7 +1,4 @@
 \begin{abstract}
-This is my abstract.  I usually keep these short and too the point
-(around 200-300 words).  You don't have to cite anything -- in fact it
-is considered poor form to cite things in your abstract -- but you do
-need to give the reader an idea about what you did.  It is also a good
-idea to put numbers in your abstract.
+Modern day smartphones are plagued with vulnerabilities.  As the smartphone adoption continues to increase, and more sensitive usage and information migrates to smartphones, these vulnerabilities simply are not acceptable.  We have created a system implementing X-server, unionfs, and linux containers, which can securely run native applications.  X-server provides the graphical interface required by most native applications, while unionfs and linux containers provide the isolation, to guarantee that the application cannot access other applications or sensitive information.
+
 \end{abstract}
