--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -22,7 +22,7 @@ University of Illinois at Urbana Champaign}
 \maketitle
 
 % No abstract for introduction
-%\input{abstract.tex}
+\input{abstract.tex}
 \input{intro.tex}
 \label{sec:intro}
 \input{design.tex}
