--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -33,6 +33,7 @@ University of Illinois at Urbana Champaign}
 \input{overview.tex}
 \input{design.tex}
 \input{impl.tex}
+\input{discussion.tex}
 \input{eval.tex}
 \input{related.tex}
 \input{conclusion.tex}
