Added future work section

--- a/final-report/TODO
+++ b/final-report/TODO
@@ -24,10 +24,7 @@ Measure CPU and memory overhead in containers
 Related Work:
 MORE of it.. Fill at least one page with it
 
-Future Work:
-Live migration
-More containers support
-Communication between containers
+Add more to Future Work
 
 Conclusion:
 Throw in the git repo url
