--- a/final-report/paper.tex
+++ b/final-report/paper.tex
@@ -36,6 +36,7 @@ University of Illinois at Urbana Champaign}
 \input{discussion.tex}
 \input{eval.tex}
 \input{related.tex}
+\input{future.tex}
 \input{conclusion.tex}
 
 \bibliographystyle{abbrv}
