Added a bit for the lxc eval

--- a/final-report/eval.tex
+++ b/final-report/eval.tex
@@ -44,8 +44,7 @@ ftext & $481000$ & $556000$ & $11.43\%$ \\ [2pt]
 
 \subsection{LXC Performance numbers}
 
-\Comment{FINISH THIS}
-Table \ref{tab:lxc_perf}.
+Our addition of the linux container functionality to the kernel imposed no noticeable overhead to the phone.  Our testing (\ref{sec:lxc_perf}) proved that i/o, cpu, and memory performance was unaffected by the addition of the container code.  There was no overhead to running inside a container as well.
 
 \begin{table}[ht]
 {\small
