--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -5,6 +5,7 @@
 The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating sysystem or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ are popular implementations.\\
 \Comment{Need a couple of references here to OpenVZ and LSM}
  
+\subsection{Linux Containers}
 Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms. We list the different resources isolated using containers and the techniques used for them below.
 % such as   runs processes on a Linux kernel, other OSes such as Windows and other UNIXes (BSD or OSX) can not be used as containers.  
 
@@ -22,12 +23,13 @@ Process identifiers (PIDs) are isolated using PID namespaces such that with resp
 Inter-Process Communication (IPC) between processes uses shared objects like shared memory segments, message queues etc. To create isolated environments, it is necessary that processes from one container cannot share data or communicate with other containers. This is achieved by introducing IPC namespaces which creates separate set of IPC objects for each container.
 
 \subsection{User Namespaces}
+Utsname namespaces were first available in Linux kernel 2.6.19.  Utsname supplies information about a system's hostname.  With Utsname, different processes can be associated with different hostnames, and jobs being migrated can take their hostnames with them.
 
 \subsection{Network Devices}
-
+The Linux kernel 2.6.26 was the first version to include network namespaces.  The network namespaces assigns a private set of network resources, including IP addresses, routes, sockets, and more, to any number of processes.  This allows for shared names among different namespaces and isolation between those namespaces.  This provides substantial improvements in security, network resource management, namespace consolidation, and mobility.
 
 \subsection{Readonly-bind mounts}
-
+Readonly-bind mounts have been available since Linux kernel 2.6.24.  This allows for read-only accesses to a filesystem mounted read-write.  It guarantees that one process can read and write to the filesystem, while others can only write to it, regardless of their privileges.
 
 \subsubsection{Copy-on-Write filesystems}
 
