Changes to design + some references

--- a/final-report/mybib.bib
+++ b/final-report/mybib.bib
@@ -183,3 +183,16 @@ howpublished = {\url{http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2009-22
   title = "{WebOS Internals}",
   howpublished = {\url{http://www.webos-internals.org}},
 }
+
+@misc{LSM,
+  title = "{Linux Security Modules: General Security Support for the Linux Kernel}",
+  howpublished = {\url{http://www.usenix.org/event/sec02/full_papers/wright/wright_html/index.html}},
+  author = {Chris Wright, Crispin Cowan, James Morris, Stephen Smalley, and Greg Kroah-Hartman},
+  year = {2002},
+  organization = {USENIX Association},
+}
+
+@misc{OpenVZ,
+  title = "{OpenVZ}",
+  howpublished = {\url{http://wiki.openvz.org/Main_Page}},
+}
