--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -3,15 +3,23 @@
 
 \subsection{Secure Isolation}
 The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating sysystem or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ are popular implementations.\\
-\Comment{Need a couple of references here to OpenVZ and LSM}
+\Comment{Need a couple of references here to OpenVZ: \cite{OpenVZ} and LSM: \cite{LSM}}
  
 \subsection{Linux Containers}
 Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms. We list the different resources isolated using containers and the techniques used for them below.
 % such as   runs processes on a Linux kernel, other OSes such as Windows and other UNIXes (BSD or OSX) can not be used as containers.  
 
 %To achieve the first goal, we propose to use 
-
+\Comment{Someone should finish this}
 %first investigated Type-II virtualization techniques which allow a guest operating system to run from within the host operating system.
+
+\begin{figure}[tbh]
+\centering
+\includegraphics[width=1.0\columnwidth]{xchat1}
+\caption{Linux Container Architecture}
+\label{fig:containers}
+\end{figure}
+
 
 \subsection{Host Identification}
 On Linux machines, the identity of a system is usually established through the command `uname'. This command reads informations stored in the structure `utsname'. The structure includes the name of the operating system in use and the current version of the operating system. The structure also contains the hostname of the machine and this is used to identify the machine in network communications. Linux Containers implement a per-process utsname namespace and this enables each container to have a different hostname.
