design.tex: xchat1->containers image

--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -15,7 +15,7 @@ Linux Containers (LXC) implement OS-level virtualization techniques in order to 
 
 \begin{figure}[tbh]
 \centering
-\includegraphics[width=1.0\columnwidth]{xchat1}
+\includegraphics[width=1.0\columnwidth]{containers}
 \caption{Linux Container Architecture}
 \label{fig:containers}
 \end{figure}
