--- a/final-report/design.tex
+++ b/final-report/design.tex
@@ -2,11 +2,10 @@
 \label{sec:design}
 
 \subsection{Secure Isolation}
-The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating sysystem or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ are popular implementations.\\
-\Comment{Need a couple of references here to OpenVZ: \cite{OpenVZ} and LSM: \cite{LSM}}
+The two primary goals of our design is to a. Provide isolation of selected applications on mobile phones and b. To build a usable solution which can be integrated seamlessly into the host operating system of the smartphone. To achieve these goals we either need a type-II hypervisor which can run within the host operating sysystem or employ OS-level virtualization techniques like containers.  Unlike conventional virtualization, containers have almost no overhead as they do not run the entire software stack of the guest operating system.  On the other hand, because the virtualization is facilitated by the operating system, other OSes or architectures cannot be used within a container.In our design, we propose to use operating system level virtualization techniques of which Linux Containers and OpenVZ \cite{OpenVZ} are popular implementations.\\
  
 \subsection{Linux Containers}
-Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms. We list the different resources isolated using containers and the techniques used for them below.
+Linux Containers (LXC) implement OS-level virtualization techniques in order to run a number of isolated virtual environments on a single host.  LXC differs from conventional virtualization techniques, which generally require the installation of guest OSes.  The isolated virtual environments or containers, are built upon other Linux security mechanisms \cite{LSM}. We list the different resources isolated using containers and the techniques used for them below.
 % such as   runs processes on a Linux kernel, other OSes such as Windows and other UNIXes (BSD or OSX) can not be used as containers.  
 
 %To achieve the first goal, we propose to use 
@@ -31,6 +30,7 @@ Process identifiers (PIDs) are isolated using PID namespaces such that with resp
 Inter-Process Communication (IPC) between processes uses shared objects like shared memory segments, message queues etc. To create isolated environments, it is necessary that processes from one container cannot share data or communicate with other containers. This is achieved by introducing IPC namespaces which creates separate set of IPC objects for each container.
 
 \subsection{User Namespaces}
+\Comment{Oops.. this should be about user namespaces and not UTSname.. }
 Utsname namespaces were first available in Linux kernel 2.6.19.  Utsname supplies information about a system's hostname.  With Utsname, different processes can be associated with different hostnames, and jobs being migrated can take their hostnames with them.
 
 \subsection{Network Devices}
